<resources>
    <string name="app_name">Ear&amp;Hz</string>
    <string name="app_name_rus">Тренер слуха</string>
    <string name="invalid_frequency">Неверное значение частоты</string>
    <string name="frequence">Частота</string>
    <string name="frequencyHertz">Частота (Гц)</string>
    <string name="enterFrequency">Введите частоту</string>
    <string name="duration">500000</string>
    <string name="addWave">Добавить волну</string>
    <string name="play">Воспроизвести</string>
    <string name="waveParameters">Волновые хар-ки</string>
    <string name="harmonicParameters">Хар-ки гармоники</string>
    <string name="apply">Применить</string>
    <string name="cancel">Отменить</string>
    <string name="stereo">Стерео</string>
    <string name="mono">Моно</string>
    <string name="type">Тип:</string>
    <string name="phaseCorrection">Коррекция фазы</string>
    <string name="sin">Синус</string>
    <string name="saw">Пила</string>
    <string name="violin">Скрипка</string>
    <string name="organ">Орган</string>
    <string name="numberOfHarmonic">Кол-во гармоник</string>
    <string name="enterHarmonicsNumber">Введите кол-во гармоник</string>
    <string name="stop">Стоп</string>
    <string name="change">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="addHarmonic">Добавить гармонику</string>
    <string name="showGraph">Показать график</string>
    <string name="showShortGraph">Показать график(16 бит)</string>
    <string name="createWav">Создать Wav</string>
    <string name="playmp3">Воспроизвести mp3</string>
    <string name="plus">+</string>
    <string name="plus1">+1</string>
    <string name="plus50">+50</string>
    <string name="minus">-</string>
    <string name="minus1">-1</string>
    <string name="minus50">-50</string>
    <string name="deleteOneHarmonics">-1 гарм-ка</string>
    <string name="addOneHarmonics">+1 гарм-ка</string>
    <string name="horizontalZoomScroll">Разрешить масштабирование</string>
    <string name="palka">|</string>
    <string name="amplitude">Амп-да</string>
    <string name="add">Доб-ть</string>
    <string name="fastAdd">Скрипка</string>
    <string name="firstRatio">1-ый коэф.</string>
    <string name="secondRatio">2-ой коэф.</string>
    <string name="isFloat">Float буфер</string>
    <string name="textViewFrequency">Частота: </string>
    <string name="textViewHarmonics">Гармоники: </string>
    <string name="textViewDigitCapacity">Разрядность: </string>
    <string name="Hertz">Гц, </string>
    <string name="transition">transition</string>
    <string name="step">Шаг</string>
    <string name="soundEffects">Звуковые эффекты</string>
    <string name="amplitudeDynamic">Динамика амплитуды</string>
    <string name="reverberation">Реверберация</string>
    <string name="frequencyDynamic">Динамика частоты</string>
    <string name="normalization">Нормализация амплитуды</string>
    <string name="settingsAD">Настройки динамики амплитуды</string>
    <string name="settings">Настройки</string>
    <string name="enterDurationTime">Введите значение</string>
    <string name="singleSettings">Single</string>
    <string name="multiSettings">Multi</string>
    <string name="durationTime">Продолжительность:</string>

</resources>
