<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/toolbar_b">

    <include
        layout="@layout/toolbar_settings_activity"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/type"
        android:textSize="16dp"
        android:layout_marginStart="5dp"/>

    <RadioGroup
        android:id="@+id/single_multi_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp">

        <RadioButton
            android:id="@+id/radio_button_single"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:text="@string/singleSettings"
            android:textColor="@color/colorPrimary"
            />

        <RadioButton
            android:id="@+id/radio_button_multi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:text="@string/multiSettings"
            android:textColor="@color/colorPrimary"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/TextViewDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/durationTime"
        android:textSize="16sp"
        android:layout_marginStart="5dp"/>

    <EditText
        android:id="@+id/durationEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/border_rectangle"
        android:ems="10"
        android:hint="@string/enterDurationTime"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/sounds_effects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/soundEffects"
        android:textSize="16sp"
        android:layout_marginStart="5dp"/>


    <CheckBox
        android:id="@+id/check_box_amplitude_dynamic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amplitudeDynamic"
        android:buttonTint="@color/colorPrimary"
        android:layout_marginStart="5dp"
        />

    <CheckBox
        android:id="@+id/check_box_frequency_dynamic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frequencyDynamic"
        android:buttonTint="@color/colorPrimary"
        android:layout_marginStart="5dp"
        />

    <CheckBox
        android:id="@+id/check_box_normalization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normalization"
        android:buttonTint="@color/colorPrimary"
        android:layout_marginStart="5dp"
        />

    <CheckBox
        android:id="@+id/check_box_reverberation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reverberation"
        android:buttonTint="@color/colorPrimary"
        android:layout_marginStart="5dp"
        />

    <CheckBox
        android:id="@+id/check_box_stereo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stereo"
        android:buttonTint="@color/colorPrimary"
        android:layout_marginStart="5dp"
        />


</LinearLayout>