<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioGroup
            android:id="@+id/radioGroupType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center">
            <RadioButton
                android:id="@+id/radioButtonViolin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/violin"
                android:textSize="16sp">
            </RadioButton>
            <RadioButton
                android:id="@+id/radioButtonSin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sin"
                android:textSize="16sp">
            </RadioButton>
        </RadioGroup>
        <RadioGroup
            android:id="@+id/radioGroupChannelsNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center">
            <RadioButton
                android:id="@+id/radioButtonMono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mono"
                android:textSize="16sp">
            </RadioButton>
            <RadioButton
                android:id="@+id/radioButtonStereo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stereo"
                android:textSize="16sp">
            </RadioButton>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/frequence"/>
        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>
    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textViewNumberOfHarmonic"
            android:layout_width="0dp"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/numberOfHarmonic"/>
        <EditText
            android:id="@+id/editTextNumberOfHarmonic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>
    <TextView
        android:id="@+id/seekBarProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="10dp"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />
    <SeekBar
        android:id="@+id/seekBar"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/negativeButton"
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/positiveButton"
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apply"/>
    </LinearLayout>
</LinearLayout>