<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:columnCount="4"
    android:layout_height="match_parent">
    <TextView
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="0"
        android:layout_rowSpan="1"
        android:id="@+id/textViewFrequency"
        android:layout_width="wrap_content"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        android:text="@string/frequence"/>
    <EditText
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_row="0"
        android:layout_rowSpan="1"
        android:id="@+id/editTextFrequency"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />
    <TextView
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_row="0"
        android:layout_rowSpan="1"
        android:id="@+id/textViewAmplitude"
        android:layout_width="wrap_content"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        android:text="@string/amplitude"/>
    <EditText
        android:layout_column="3"
        android:layout_columnSpan="1"
        android:layout_row="0"
        android:layout_rowSpan="1"
        android:id="@+id/editTextAmplitude"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />
    <Button
        android:id="@+id/buttonAddHarmonic"
        android:layout_column="2"
        android:layout_columnSpan="2"
        android:layout_row="1"
        android:layout_rowSpan="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/buttonFastAddHarmonic"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="1"
        android:layout_rowSpan="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fastAdd"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/negativeButtonHarmonicDialog"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="4"
        android:layout_rowSpan="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/positiveButtonHarmonicDialog"
        android:layout_column="2"
        android:layout_columnSpan="2"
        android:layout_row="4"
        android:layout_rowSpan="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:textSize="18sp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_row="3"
        android:layout_rowSpan="1"
        android:id="@+id/recyclerViewHarmonics"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:visibility="visible"
        tools:listitem="@layout/wave_harmonic"/>

</GridLayout>